# mcgs

./: .gitattributes  .gitignore  CMakeLists.txt  build.sh  index.html  mac_build.sh  readme.md
.github/: .gitignore
.github/assets/: .gitignore
.github/workflows/: .gitignore  ci.yml  testrunner.yml
docs/: .gitignore  doxyfile  prepareDocs.py  readme.md
docs/html/: annotated.html  annotated_dup.js  classes.html  classmcgs_1_1Partition.html  classmcgs_1_1Partition__coll__graph.map  classmcgs_1_1Partition__coll__graph.md5  dir_c3ccd83554bf844c87c02b8eb1433921.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  graph_legend.html  index.html  mcgs_8hpp.html  mcgs_8hpp.js  menudata.js  namespacemcgs.html  namespacemcgs.js  namespacemembers.html  namespacemembers_enum.html  namespacemembers_func.html  namespaces.html  namespaces_dup.js  navtreedata.js  navtreeindex0.js  readme_8md.html  structmcgs_1_1CSRAdaptor-members.html  structmcgs_1_1CSRAdaptor.html  structmcgs_1_1CSRAdaptor.js  structmcgs_1_1CSRAdaptor__coll__graph.map  structmcgs_1_1CSRAdaptor__coll__graph.md5  structmcgs_1_1ColorSettings-members.html  structmcgs_1_1ColorSettings.html  structmcgs_1_1ColorSettings.js  structmcgs_1_1ColorSettings__coll__graph.map  structmcgs_1_1ColorSettings__coll__graph.md5  (+5 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  namespaces_0.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js
include/mcgs/: mcgs.hpp
src/: Color.cpp  Solve.cpp  color.cpp  multithreading.hpp  partition.cpp  partition.hpp  reorder.cpp  solve.cpp
test/: .gitignore  cli.cpp  main.cpp  parseMatrixMarket.cpp  parseMatrixMarket.hpp  testrunner.sh
